src/core/TLONParser.py
# Generated from TLON.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class TLONParser ( Parser ):

    grammarFileName = "TLON.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'||'", "'&&'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'^'", "'!'", "';'", "'='", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "','", "':'", "'true'", "'false'", 
                     "'nil'", "'if'", "'else'", "'while'", "'log'", "'for'", 
                     "'in'", "'funcion'", "'end'", "'retorno'", "'importar'", 
                     "'desde'", "'todo'", "'.'" ]

    symbolicNames = [ "<INVALID>", "OR", "AND", "EQ", "NEQ", "GT", "LT", 
                      "GTEQ", "LTEQ", "PLUS", "MINUS", "MULT", "DIV", "MOD", 
                      "POW", "NOT", "SCOL", "ASSIGN", "OPAR", "CPAR", "OBRACE", 
                      "CBRACE", "OKEY", "CKEY", "COMMA", "POINTS", "TRUE", 
                      "FALSE", "NIL", "IF", "ELSE", "WHILE", "LOG", "FOR", 
                      "IN", "FUNCION", "END", "RETORNO", "IMPORT", "FROM", 
                      "ASTERISC", "POINT", "ID", "INT", "FLOAT", "STRING", 
                      "COMMENT", "SPACE", "OTHER" ]

    RULE_parse = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_assignment = 3
    RULE_if_stat = 4
    RULE_while_stat = 5
    RULE_for_stat = 6
    RULE_log = 7
    RULE_funcion = 8
    RULE_importar = 9
    RULE_retornar = 10
    RULE_condition_block = 11
    RULE_stat_block = 12
    RULE_array = 13
    RULE_accessarray = 14
    RULE_variable = 15
    RULE_parametro = 16
    RULE_expr = 17
    RULE_atom = 18
    RULE_objeto = 19
    RULE_keyvalue = 20

    ruleNames =  [ "parse", "block", "stat", "assignment", "if_stat", "while_stat", 
                   "for_stat", "log", "funcion", "importar", "retornar", 
                   "condition_block", "stat_block", "array", "accessarray", 
                   "variable", "parametro", "expr", "atom", "objeto", "keyvalue" ]

    EOF = Token.EOF
    OR=1
    AND=2
    EQ=3
    NEQ=4
    GT=5
    LT=6
    GTEQ=7
    LTEQ=8
    PLUS=9
    MINUS=10
    MULT=11
    DIV=12
    MOD=13
    POW=14
    NOT=15
    SCOL=16
    ASSIGN=17
    OPAR=18
    CPAR=19
    OBRACE=20
    CBRACE=21
    OKEY=22
    CKEY=23
    COMMA=24
    POINTS=25
    TRUE=26
    FALSE=27
    NIL=28
    IF=29
    ELSE=30
    WHILE=31
    LOG=32
    FOR=33
    IN=34
    FUNCION=35
    END=36
    RETORNO=37
    IMPORT=38
    FROM=39
    ASTERISC=40
    POINT=41
    ID=42
    INT=43
    FLOAT=44
    STRING=45
    COMMENT=46
    SPACE=47
    OTHER=48

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(TLONParser.BlockContext,0)


        def EOF(self):
            return self.getToken(TLONParser.EOF, 0)

        def getRuleIndex(self):
            return TLONParser.RULE_parse

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = TLONParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.block()
            self.state = 43
            self.match(TLONParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TLONParser.StatContext)
            else:
                return self.getTypedRuleContext(TLONParser.StatContext,i)


        def getRuleIndex(self):
            return TLONParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = TLONParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.stat()

            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TLONParser.OBRACE) | (1 << TLONParser.OKEY) | (1 << TLONParser.TRUE) | (1 << TLONParser.FALSE) | (1 << TLONParser.NIL) | (1 << TLONParser.IF) | (1 << TLONParser.WHILE) | (1 << TLONParser.LOG) | (1 << TLONParser.FOR) | (1 << TLONParser.FUNCION) | (1 << TLONParser.RETORNO) | (1 << TLONParser.IMPORT) | (1 << TLONParser.FROM) | (1 << TLONParser.ID) | (1 << TLONParser.INT) | (1 << TLONParser.FLOAT) | (1 << TLONParser.STRING) | (1 << TLONParser.OTHER))) != 0):
                self.state = 46
                self.stat()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(TLONParser.AssignmentContext,0)


        def if_stat(self):
            return self.getTypedRuleContext(TLONParser.If_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(TLONParser.While_statContext,0)


        def for_stat(self):
            return self.getTypedRuleContext(TLONParser.For_statContext,0)


        def log(self):
            return self.getTypedRuleContext(TLONParser.LogContext,0)


        def funcion(self):
            return self.getTypedRuleContext(TLONParser.FuncionContext,0)


        def importar(self):
            return self.getTypedRuleContext(TLONParser.ImportarContext,0)


        def retornar(self):
            return self.getTypedRuleContext(TLONParser.RetornarContext,0)


        def atom(self):
            return self.getTypedRuleContext(TLONParser.AtomContext,0)


        def SCOL(self):
            return self.getToken(TLONParser.SCOL, 0)

        def OTHER(self):
            return self.getToken(TLONParser.OTHER, 0)

        def getRuleIndex(self):
            return TLONParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = TLONParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.if_stat()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.while_stat()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.for_stat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.log()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.funcion()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 58
                self.importar()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 59
                self.retornar()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 60
                self.atom()
                self.state = 61
                self.match(TLONParser.SCOL)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 63
                self.match(TLONParser.OTHER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(TLONParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(TLONParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(TLONParser.ExprContext,0)


        def SCOL(self):
            return self.getToken(TLONParser.SCOL, 0)

        def getRuleIndex(self):
            return TLONParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = TLONParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.variable()
            self.state = 67
            self.match(TLONParser.ASSIGN)
            self.state = 68
            self.expr(0)
            self.state = 69
            self.match(TLONParser.SCOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(TLONParser.IF)
            else:
                return self.getToken(TLONParser.IF, i)

        def condition_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TLONParser.Condition_blockContext)
            else:
                return self.getTypedRuleContext(TLONParser.Condition_blockContext,i)


        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(TLONParser.ELSE)
            else:
                return self.getToken(TLONParser.ELSE, i)

        def stat_block(self):
            return self.getTypedRuleContext(TLONParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return TLONParser.RULE_if_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stat" ):
                return visitor.visitIf_stat(self)
            else:
                return visitor.visitChildren(self)




    def if_stat(self):

        localctx = TLONParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_if_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(TLONParser.IF)
            self.state = 72
            self.condition_block()
            self.state = 78
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 73
                    self.match(TLONParser.ELSE)
                    self.state = 74
                    self.match(TLONParser.IF)
                    self.state = 75
                    self.condition_block() 
                self.state = 80
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 81
                self.match(TLONParser.ELSE)
                self.state = 82
                self.stat_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(TLONParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(TLONParser.ExprContext,0)


        def stat_block(self):
            return self.getTypedRuleContext(TLONParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return TLONParser.RULE_while_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stat" ):
                return visitor.visitWhile_stat(self)
            else:
                return visitor.visitChildren(self)




    def while_stat(self):

        localctx = TLONParser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_while_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(TLONParser.WHILE)
            self.state = 86
            self.expr(0)
            self.state = 87
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class For_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(TLONParser.FOR, 0)

        def ID(self):
            return self.getToken(TLONParser.ID, 0)

        def IN(self):
            return self.getToken(TLONParser.IN, 0)

        def expr(self):
            return self.getTypedRuleContext(TLONParser.ExprContext,0)


        def stat_block(self):
            return self.getTypedRuleContext(TLONParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return TLONParser.RULE_for_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_stat" ):
                return visitor.visitFor_stat(self)
            else:
                return visitor.visitChildren(self)




    def for_stat(self):

        localctx = TLONParser.For_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_for_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(TLONParser.FOR)
            self.state = 90
            self.match(TLONParser.ID)
            self.state = 91
            self.match(TLONParser.IN)
            self.state = 92
            self.expr(0)
            self.state = 93
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOG(self):
            return self.getToken(TLONParser.LOG, 0)

        def OPAR(self):
            return self.getToken(TLONParser.OPAR, 0)

        def expr(self):
            return self.getTypedRuleContext(TLONParser.ExprContext,0)


        def CPAR(self):
            return self.getToken(TLONParser.CPAR, 0)

        def SCOL(self):
            return self.getToken(TLONParser.SCOL, 0)

        def getRuleIndex(self):
            return TLONParser.RULE_log

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog" ):
                return visitor.visitLog(self)
            else:
                return visitor.visitChildren(self)




    def log(self):

        localctx = TLONParser.LogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_log)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(TLONParser.LOG)
            self.state = 96
            self.match(TLONParser.OPAR)
            self.state = 97
            self.expr(0)
            self.state = 98
            self.match(TLONParser.CPAR)
            self.state = 99
            self.match(TLONParser.SCOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCION(self, i:int=None):
            if i is None:
                return self.getTokens(TLONParser.FUNCION)
            else:
                return self.getToken(TLONParser.FUNCION, i)

        def ID(self):
            return self.getToken(TLONParser.ID, 0)

        def OPAR(self):
            return self.getToken(TLONParser.OPAR, 0)

        def CPAR(self):
            return self.getToken(TLONParser.CPAR, 0)

        def END(self):
            return self.getToken(TLONParser.END, 0)

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TLONParser.ParametroContext)
            else:
                return self.getTypedRuleContext(TLONParser.ParametroContext,i)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TLONParser.StatContext)
            else:
                return self.getTypedRuleContext(TLONParser.StatContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TLONParser.COMMA)
            else:
                return self.getToken(TLONParser.COMMA, i)

        def getRuleIndex(self):
            return TLONParser.RULE_funcion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncion" ):
                return visitor.visitFuncion(self)
            else:
                return visitor.visitChildren(self)




    def funcion(self):

        localctx = TLONParser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(TLONParser.FUNCION)
            self.state = 102
            self.match(TLONParser.ID)
            self.state = 103
            self.match(TLONParser.OPAR)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TLONParser.ID:
                self.state = 104
                self.parametro()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==TLONParser.COMMA:
                    self.state = 105
                    self.match(TLONParser.COMMA)
                    self.state = 106
                    self.parametro()
                    self.state = 111
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 114
            self.match(TLONParser.CPAR)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TLONParser.OBRACE) | (1 << TLONParser.OKEY) | (1 << TLONParser.TRUE) | (1 << TLONParser.FALSE) | (1 << TLONParser.NIL) | (1 << TLONParser.IF) | (1 << TLONParser.WHILE) | (1 << TLONParser.LOG) | (1 << TLONParser.FOR) | (1 << TLONParser.FUNCION) | (1 << TLONParser.RETORNO) | (1 << TLONParser.IMPORT) | (1 << TLONParser.FROM) | (1 << TLONParser.ID) | (1 << TLONParser.INT) | (1 << TLONParser.FLOAT) | (1 << TLONParser.STRING) | (1 << TLONParser.OTHER))) != 0):
                self.state = 115
                self.stat()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(TLONParser.END)
            self.state = 122
            self.match(TLONParser.FUNCION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImportarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(TLONParser.IMPORT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TLONParser.ID)
            else:
                return self.getToken(TLONParser.ID, i)

        def POINT(self, i:int=None):
            if i is None:
                return self.getTokens(TLONParser.POINT)
            else:
                return self.getToken(TLONParser.POINT, i)

        def FROM(self):
            return self.getToken(TLONParser.FROM, 0)

        def getRuleIndex(self):
            return TLONParser.RULE_importar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportar" ):
                return visitor.visitImportar(self)
            else:
                return visitor.visitChildren(self)




    def importar(self):

        localctx = TLONParser.ImportarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_importar)
        self._la = 0 # Token type
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TLONParser.IMPORT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(TLONParser.IMPORT)
                self.state = 125
                self.match(TLONParser.ID)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==TLONParser.POINT:
                    self.state = 126
                    self.match(TLONParser.POINT)
                    self.state = 127
                    self.match(TLONParser.ID)
                    self.state = 132
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [TLONParser.FROM]:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(TLONParser.FROM)
                self.state = 134
                self.match(TLONParser.ID)
                self.state = 135
                self.match(TLONParser.IMPORT)
                self.state = 136
                self.match(TLONParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RetornarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETORNO(self):
            return self.getToken(TLONParser.RETORNO, 0)

        def OPAR(self):
            return self.getToken(TLONParser.OPAR, 0)

        def expr(self):
            return self.getTypedRuleContext(TLONParser.ExprContext,0)


        def CPAR(self):
            return self.getToken(TLONParser.CPAR, 0)

        def SCOL(self):
            return self.getToken(TLONParser.SCOL, 0)

        def getRuleIndex(self):
            return TLONParser.RULE_retornar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetornar" ):
                return visitor.visitRetornar(self)
            else:
                return visitor.visitChildren(self)




    def retornar(self):

        localctx = TLONParser.RetornarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_retornar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(TLONParser.RETORNO)
            self.state = 140
            self.match(TLONParser.OPAR)
            self.state = 141
            self.expr(0)
            self.state = 142
            self.match(TLONParser.CPAR)
            self.state = 143
            self.match(TLONParser.SCOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Condition_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(TLONParser.ExprContext,0)


        def stat_block(self):
            return self.getTypedRuleContext(TLONParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return TLONParser.RULE_condition_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_block" ):
                return visitor.visitCondition_block(self)
            else:
                return visitor.visitChildren(self)




    def condition_block(self):

        localctx = TLONParser.Condition_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_condition_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.expr(0)
            self.state = 146
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stat_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBRACE(self):
            return self.getToken(TLONParser.OBRACE, 0)

        def CBRACE(self):
            return self.getToken(TLONParser.CBRACE, 0)

        def block(self):
            return self.getTypedRuleContext(TLONParser.BlockContext,0)


        def stat(self):
            return self.getTypedRuleContext(TLONParser.StatContext,0)


        def getRuleIndex(self):
            return TLONParser.RULE_stat_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_block" ):
                return visitor.visitStat_block(self)
            else:
                return visitor.visitChildren(self)




    def stat_block(self):

        localctx = TLONParser.Stat_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stat_block)
        self._la = 0 # Token type
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(TLONParser.OBRACE)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TLONParser.OBRACE) | (1 << TLONParser.OKEY) | (1 << TLONParser.TRUE) | (1 << TLONParser.FALSE) | (1 << TLONParser.NIL) | (1 << TLONParser.IF) | (1 << TLONParser.WHILE) | (1 << TLONParser.LOG) | (1 << TLONParser.FOR) | (1 << TLONParser.FUNCION) | (1 << TLONParser.RETORNO) | (1 << TLONParser.IMPORT) | (1 << TLONParser.FROM) | (1 << TLONParser.ID) | (1 << TLONParser.INT) | (1 << TLONParser.FLOAT) | (1 << TLONParser.STRING) | (1 << TLONParser.OTHER))) != 0):
                    self.state = 149
                    self.block()


                self.state = 152
                self.match(TLONParser.CBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.stat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OKEY(self):
            return self.getToken(TLONParser.OKEY, 0)

        def CKEY(self):
            return self.getToken(TLONParser.CKEY, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TLONParser.ExprContext)
            else:
                return self.getTypedRuleContext(TLONParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TLONParser.COMMA)
            else:
                return self.getToken(TLONParser.COMMA, i)

        def POINTS(self, i:int=None):
            if i is None:
                return self.getTokens(TLONParser.POINTS)
            else:
                return self.getToken(TLONParser.POINTS, i)

        def getRuleIndex(self):
            return TLONParser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):
